# genlib-desktop

./: .gitignore  CLAUDE.md  COORDINATION.md  Cargo.toml  LICENSE  MIGRATION_PLAN.md  README.md  build.sh
docs/: handbok-sv.md  handbook-de.md  handbook-en.md  onboarding-de.md  onboarding-en.md  onboarding-sv.md
docs/i18n/: README.md
docs/images/: README.md
resources/: genlib.desktop
src/: app.rs  lib.rs  main.rs  projects.rs
src/db/: checklist_repo.rs  config_repo.rs  document_repo.rs  migrations.rs  mod.rs  person_repo.rs  relationship_repo.rs  resource_repo.rs  schema.rs
src/gedcom/: importer.rs  mod.rs  models.rs  parser.rs
src/models/: checklist.rs  config.rs  document.rs  mod.rs  person.rs  relationship.rs  resource.rs
src/services/: backup.rs  checklist_sync.rs  document_sync.rs  export.rs  family_tree.rs  mod.rs  restore.rs
src/ui/: mod.rs  shortcuts.rs  state.rs  theme.rs
src/ui/modals/: archive_modal.rs  confirm_dialog.rs  document_upload.rs  gedcom_import.rs  mod.rs  person_form.rs  relationship_form.rs  resource_form.rs
src/ui/views/: backup_view.rs  checklist_search.rs  checklist_templates.rs  dashboard.rs  document_templates.rs  document_viewer.rs  family_tree.rs  mod.rs  person_detail.rs  person_list.rs  project_selector.rs  reports.rs  resource_detail.rs  resource_list.rs  settings.rs  setup_wizard.rs  splash_screen.rs
src/ui/widgets/: checklist_panel.rs  image_gallery.rs  mod.rs
src/utils/: date.rs  error.rs  exif.rs  file_ops.rs  mod.rs  path.rs
