[package]
name = "genlib-desktop"
version = "0.2.0"
edition = "2021"
authors = ["Johan"]
description = "Dokumenthanteringssystem för släktforskning"
license = "MIT"
rust-version = "1.75"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# File system
walkdir = "2.5"
directories = "5.0"
dirs = "5.0"
zip = "2.2"
rfd = "0.17"

# Image processing
kamadak-exif = "0.5"

# PDF generation
printpdf = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
tempfile = "3.24.0"
